--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
         Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     background-color: hsl(240, 10%, 29%);
+    height: 100vh;
 }
 
 a {
@@ -18,4 +19,8 @@ a {
 
 * {
     box-sizing: border-box;
+}
+
+.text_clamp_title {
+    font-size: clamp(18px, 2vh, 48px);
 }
